--- a/ysgame-privacy-policy.html
+++ b/ysgame-privacy-policy.html
@@ -156,7 +156,7 @@
     <h2>Inquiry</h2>
     <p><span>&nbsp;</span></p>
     <p><span>If you have any questions, comments or concerns
-        regarding our privacy policy and/or practices, please email us at newhorizon@52gms.cn.</span></p>
+        regarding our privacy policy and/or practices, please email us at 76670758@qq.com.</span></p>
   </div>
 </body>
 
