--- a/ysgame-privacy-policy.html
+++ b/ysgame-privacy-policy.html
@@ -4,33 +4,17 @@
   <meta http-equiv=Content-Type content="text/html; charset=utf-8">
   <meta name=Generator content="Microsoft Word 15 (filtered)">
   <title>Privacy Policy | YS Game Studio</title>
-  <style>
-    body {
-      padding: 30px;
-    }
-    p,
-    li,
-    div {
-      margin: 0;
-      font-size: 12px;
-    }
-    h1 {
-      display: block;
-      text-align: center;
-      line-height: 30px;
-      font-size: 24px;
-      padding-top: 20px;
-    }
-    h2 {
-      font-size: 14px;
-    }
-  </style>
+  <link rel="stylesheet" media="all" href="./css/ysgame-privacy-policy.css" />
 </head>
 
 <body>
-  <div class=WordSection1>
-    <h1>Privacy Policy | YS Game Studio</h1>
-    <p><span>&nbsp;</span></p>
+  <header>
+    <h1>YS Game Studio</h1>
+  </header>
+
+  <div class="content">
+    <h2>Privacy Policy</h2>
+
     <p><span>YS Games Studio is dedicated to protecting the
         privacy rights of online users (“User” or “You”). Please note that the scope of this Privacy Policy is limited
         solely to information collected from YS Game Studios through your use of the Service. This online
@@ -41,9 +25,10 @@
         we encourage you to review it periodically. By using the Service, you consent to the collection and use of your
         personal information as described in this Privacy Policy.</span></p>
     <p><span>&nbsp;</span></p>
-    <h2>Cookie</h2>
+
+    <h3>Cookie</h3>
     <p><span>&nbsp;</span></p>
-    <p><span>When you access or view Aladdin Interactive Game
+    <p><span>When you access or view our game
         content, the service sends cookies to your computer. A cookie is a small data file that is transferred to your
         computer's hard disk. It typically quickly identifies a user's computer and &quot;remembers&quot; information
         about the user's access, such as settings and username and password. Information contained in cookies may be
@@ -51,7 +36,8 @@
         recommendations to your interests, and usability of our services. You can disable cookies at any time, but you
         may not be able to access or use some features of the Service.</span></p>
     <p><span>&nbsp;</span></p>
-    <h2>Information Collected and Used</h2>
+
+    <h3>Information Collected and Used</h3>
     <p><span>&nbsp;</span></p>
     <p><span>When you install any of the YS game studios or
         applications, we may collect and record information you voluntarily provide us through www.facebook.com
@@ -106,7 +92,8 @@
         rented, leased, loaned, sold, or otherwise voluntarily distributed to unaffiliated third parties and used solely
         for the purpose of providing and improving the Service.</span></p>
     <p><span>&nbsp;</span></p>
-    <h2>Disclosure of Other Personal Information</h2>
+
+    <h3>Disclosure of Other Personal Information</h3>
     <p><span>&nbsp;</span></p>
     <p><span>Aladdin Interactive is not required to question or
         contest the validity of search warrants, subpoenas, or other similar governmental requests received by New
@@ -122,14 +109,16 @@
         assignees of YS Game Studios, if permitted and carried out in accordance with applicable law. there
         is.</span></p>
     <p><span>&nbsp;</span></p>
-    <h2>Security</h2>
+
+    <h3>Security</h3>
     <p><span>&nbsp;</span></p>
     <p><span>We take reasonable technical and organizational
         measures designed to protect your personal information from accidental loss and unauthorized access, misuse,
         alteration or disclosure. However, we cannot guarantee that unauthorized third parties will never overcome these
         measures or use your personal information for inappropriate purposes.</span></p>
     <p><span>&nbsp;</span></p>
-    <h2>Link Collection</h2>
+
+    <h3>Link Collection</h3>
     <p><span>&nbsp;</span></p>
     <p><span>The fact that the Service may contain links to or to
         other websites, or may present banner advertisements or other types of advertisements, is YS's approval
@@ -138,7 +127,8 @@
         choose to access through the Service. Please be sure to read the privacy policies of these websites when
         terminating the service.</span></p>
     <p><span>&nbsp;</span></p>
-    <h2>Change or Deletion of Information</h2>
+
+    <h3>Change or Deletion of Information</h3>
     <p><span>&nbsp;</span></p>
     <p><span>You can review, update, correct or delete your personal
         information by changing the applicable information by changing the applicable information on your Facebook
@@ -146,18 +136,19 @@
         would like us to delete your records in our system, please contact us. Where we are not legally obligated to
         keep records, we will endeavor to accommodate requests.</span></p>
     <p><span>&nbsp;</span></p>
-    <h2>Child Policy</h2>
+
+    <h3>Child Policy</h3>
     <p><span>&nbsp;</span></p>
     <p><span>If we become aware that a child under the age of 13 has
         provided us with personal information, we will remove such information from our files as soon as possible. The
         AS Service is not intended for children under the age of 13, and we do not knowingly collect personal
         information from children under the age of 13.</span></p>
     <p><span>&nbsp;</span></p>
-    <h2>Inquiry</h2>
+
+    <h3>Inquiry</h3>
     <p><span>&nbsp;</span></p>
     <p><span>If you have any questions, comments or concerns
         regarding our privacy policy and/or practices, please email us at 76670758@qq.com.</span></p>
   </div>
 </body>
-
 </html>
