--- a/ysgame-service.html
+++ b/ysgame-service.html
@@ -3,36 +3,15 @@
 <head>
   <meta http-equiv=Content-Type content="text/html; charset=utf-8">
   <meta name=Generator content="Microsoft Word 15 (filtered)">
-  <title>Tech Support | YS Game Studio</title>
-  <style>
-    body {
-      padding: 30px;
-    }
-    p,
-    li,
-    div {
-      margin: 0;
-      font-size: 12px;
-    }
-    h1 {
-      display: block;
-      text-align: center;
-      line-height: 30px;
-      font-size: 24px;
-      padding-top: 20px;
-    }
-    h2 {
-      font-size: 14px;
-    }
-  </style>
+  <title>YS Game Studio</title>
+  <script>
+  window.onload = function() {
+    window.location.href = "https://www.ysgamestudio.com";
+  };
+  </script>
 </head>
 
 <body>
-  <div class=WordSection1>
-    <h1>Tech Support | YS Game Studio</h1>
-    <p><span>&nbsp;</span></p>
-    <p><span>If you have any questions, please send email to: easonchiu19860129@gmail.com</span></p>
-  </div>
+  <h3>Visit at: <a href="https://www.ysgamestudio.com">https://www.ysgamestudio.com</a></h3>
 </body>
-
 </html>
